# cool-pc-price-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: products.yaml
data/: prices.db
docs/: coolpc-html-notes.md
docs/superpowers/plans/: 2026-04-21-coolpc-price-monitor.md
docs/superpowers/specs/: 2026-04-21-coolpc-price-monitor-design.md
scripts/: probe-output.txt  probe.py
src/: config.py  diff.py  main.py  matcher.py  models.py  notifier.py  renderer.py  storage.py
src/fetchers/: base.py  coolpc.py
templates/: alert.html.j2  email.html.j2
tests/: test_config.py  test_coolpc_fetcher.py  test_diff.py  test_fetcher_base.py  test_main.py  test_matcher.py  test_models.py  test_notifier.py  test_renderer.py  test_storage.py
tests/fixtures/: evaluate_sample.html  products_test.yaml
